Closed Bug 1027461 Opened 10 years ago Closed 10 years ago

Running Gaia Unit Tests in B2G Desktop Debug crashes browser on ImportManager assert

Categories

(Firefox OS Graveyard :: GonkIntegration, defect)

x86_64
Linux
defect
Not set
normal

Tracking

(tracking-b2g:backlog, b2g-v2.1 fixed)

RESOLVED FIXED
tracking-b2g backlog
Tracking Status
b2g-v2.1 --- fixed

People

(Reporter: qdot, Assigned: mrbkap)

References

Details

Attachments

(1 file, 1 obsolete file)

Running Gaia Unit Tests in B2G Desktop built using debug causes the browser to crash on an assert:

http://mxr.mozilla.org/mozilla-central/source/content/base/src/ImportManager.cpp#81

Possibly related to Bug 1016705
Attached patch Proposed fix (obsolete) — Splinter Review
If we return an error code from OnStartRequest, we will still get a call to OnStopRequest (with our error being propagated). We need to handle that call gracefully.
Attachment #8446835 - Flags: review?(gkrizsanits)
Assignee: nobody → mrbkap
Requesting blocking-2.0 because this will affect testing and is a regression.
blocking-b2g: --- → 2.0?
Whiteboard: [systemsfe]
Comment on attachment 8446835 [details] [diff] [review]
Proposed fix

Review of attachment 8446835 [details] [diff] [review]:
-----------------------------------------------------------------

::: content/base/src/ImportManager.cpp
@@ +269,5 @@
>                              nsresult aStatus)
>  {
> +  if (NS_FAILED(aStatus)) {
> +    // We failed in OnStartRequest, nothing more to do (we've already
> +    // dispatched an error event) just return here.

Does it always mean that we failed in OnStartRequest and not somewhere else in the process where we haven't dispatched error yet? I would check mStopped to just in case.

Thanks for fixing this by the way!
Attachment #8446835 - Flags: review?(gkrizsanits) → review+
I don't think this is something we would block on if push came to shove, as we have no proof of user impact & this isn't causing downtime to a test suite that is already stood up in CI.
blocking-b2g: 2.0? → backlog
Whiteboard: [systemsfe]
Attached patch Patch v2Splinter Review
That was a really good question. Here's a patch that addresses it.
Attachment #8446835 - Attachment is obsolete: true
Attachment #8448364 - Flags: review?(gkrizsanits)
Comment on attachment 8448364 [details] [diff] [review]
Patch v2

Review of attachment 8448364 [details] [diff] [review]:
-----------------------------------------------------------------

Yeah probably using a specific error is a good idea anyway.
Attachment #8448364 - Flags: review?(gkrizsanits) → review+
https://hg.mozilla.org/mozilla-central/rev/dd61f96ab348
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Depends on: 1033443
blocking-b2g: backlog → ---
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: