Bug 1027461 - Handle an error condition in imports more gracefully in debug builds.